--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!-- Write your HTML in this file -->
 
 <html>
-<a href = 'https://flatironschool.com'>
-Flatiron School
+<a href = 'https://flatironschool.com'> Flatiron School
 </a>
 </html>
